@@ -26,3 +26,13 @@ Wee::DefaultRenderer = Wee::HtmlCanvasRenderer
 
 require 'wee/idgen/simple'
 require 'wee/idgen/md5'
+
+def Wee.run(component, add_page_decoration=true, mount_path='/app')
+  require 'wee/utils'
+  require 'wee/adaptors/webrick'
+
+  component = component.new if component.kind_of?(Class)
+  component.add_decoration(Wee::PageDecoration.new('Welcome to Wee!')) if add_page_decoration
+  component.add_decoration(Wee::FormDecoration.new)
+  Wee::WEBrickAdaptor.register(mount_path => Wee::Utils.app_for { component }).start
+end
