@@ -1,3 +1,10 @@
+Mon Jul 11 17:02:40 CEST 2005	Michael Neumann <mneumann@ntecs.de>
+
+	* lib/wee.rb (Wee.run): Added method for easy startup of components. 
+
+	* lib/wee/application.rb: Method Application#insert_new_request_handler
+	  added. Refactored #handle_request a bit.
+
 Mon Jul 11 16:06:49 CEST 2005	Michael Neumann <mneumann@ntecs.de>
 
 	* lib/wee/snapshot_ext.rb: refactored. enhanced Hash to be snapshotable.
